Fix #246 - clean code and add z-index

--- a/src/components/sidebars/SidebarRightUserInfo/style.scss
+++ b/src/components/sidebars/SidebarRightUserInfo/style.scss
@@ -77,6 +77,7 @@
   height: 30px;
   background: rgba(0, 0, 0, 0.5);
   cursor: pointer;
+  z-index: 4;
 }
 
 .profile__icon--update svg {
